--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <button>Login</button>
     <button>Reset Password</button>
     <button>Sign up</button>
+    <button>Log out</button>
   </body>
 </html>
