Add new feature #2

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <button>Sign up</button>
     <button>Log out</button>
     <button>Search</button>
+    <button>New Feature</button>
   </body>
 </html>
