add from mahmoud abouelhassan

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello from Ehab github</title>
+    <title>Hello from mahmoud abouelhassan</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <h1>mahmoud abouelhassan</h1>
 
     <button>Login</button>
     <button>Reset Password</button>
